--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet>Pipeline Paula :D</router-outlet>
+<router-outlet>
+  <style>
+    .img {
+      width: 50px;
+      height: 50px;
+    }
+  </style>
+  Pipeline Paula :D
+  <img src="https://i.pinimg.com/564x/f1/f6/5f/f1f65ff078709c23a438d26bbc0ea2c8.jpg" class="img">
+</router-outlet>
